<resources>
    <string name="app_name">Wear NN</string>
    <string name="notificationCount">3</string>
    <string name="good_morning">Good morning</string>
    <string name="wear_nn_username">Wear NN userName</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="goto_signup_button">Don\'t have an account? Sign up</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="always">always</string>
    <string name="about_us">About Us</string>
    <string name="logout">logout</string>
    <string name="synchronize">synchronize</string>
    <string name="activity_metrics">Activity Metrics</string>
    <string name="totalSteps" />
    <string name="walkindata">walkinData</string>
    <string name="wearoswalingdata">wearOsWalingData</string>
    <string name="wearoswalkingdata">wearOsWalkingData</string>
    <string name="wearosheartratedata">wearOsHeartRateData</string>
    <string name="wearosstandingdata">wearOsStandingData</string>
    <string name="share">share</string>
    <string name="insurance_payment">Insurance Payment</string>
    <string name="insurance_payment_info">Insurance payment Info</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="activity_discount">Activity discount:</string>
    <string name="wearosheart">wearOsHeart</string>
    <string name="paymentDiscount">"12"</string>
    <string name="paymentTotal">"1000"</string>
    <string name="remainingPayment">"1000"</string>
    <string name="who_we_are">Who we are: </string>
    <string name="we_are_4_people_with_various_levels_of_android_and_wearos_experience_we_know_we_are_onto_something_here_our_names_are_adina_preda_elena_udrescu_andrei_gutan_and_liviu_lupascu">We are 4 people with various levels of Android and wearOs experience. We know we are onto something here. Our names are Adina Preda, Elena Udrescu, Andrei Gutan, and Liviu Lupascu.</string>
    <string name="adina_preda_nn_ro">adina.preda@nn.ro</string>
    <string name="elena_udrescu_nn_ro">elena.udrescu@nn.ro</string>
    <string name="andrei_gutan_nn_ro">andrei.gutan@nn.ro</string>
    <string name="liviu_lupascu_nn_ro">liviu.lupascu@nn.ro</string>

</resources>
