<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="120dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="450dp">

    <TextView
        android:id="@+id/metricsTitle"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/activity_metrics"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/walkingTile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="280dp"
        android:background="@drawable/background_activity_tabs"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/walkingIcon"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@drawable/nn_icon_personhike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/wearOsWalking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/wearoswalkingdata"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/walkingIcon"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heartRateTile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="280dp"
        android:background="@drawable/background_activity_tabs"
        android:padding="4dp"
        app:layout_constraintStart_toEndOf="@id/walkingTile"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/heartRateIcon"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@drawable/nn_icon_heart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/wearOsHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/wearosheartratedata"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/heartRateIcon"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standingTile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="280dp"
        android:background="@drawable/background_activity_tabs"
        android:padding="4dp"
        app:layout_constraintStart_toEndOf="@id/heartRateTile"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/standingIcon"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@drawable/nn_icon_standing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/wearOsStanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/wearosstandingdata"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/standingIcon"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>